--- a/content/post/2021-07-21-so-you-want-to-make-a-density-plot/index.Rmd
+++ b/content/post/2021-07-21-so-you-want-to-make-a-density-plot/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: So you want to make a density plot (of vowels)
+title: Making a density plot (of vowels)
 author: Elena Sheard
 date: '2021-07-21'
 slug: so-you-want-to-make-a-density-plot
